--- a/index.html
+++ b/index.html
@@ -7,15 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="icon"
+        href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' class='bi bi-envelope-heart' viewBox='0 0 16 16'%3E %3Cpath fill-rule='evenodd' d='M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l3.235 1.94a2.8 2.8 0 0 0-.233 1.027L1 5.384v5.721l3.453-2.124q.219.416.55.835l-3.97 2.443A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741l-3.968-2.442q.33-.421.55-.836L15 11.105V5.383l-3.002 1.801a2.8 2.8 0 0 0-.233-1.026L15 4.217V4a1 1 0 0 0-1-1zm6 2.993c1.664-1.711 5.825 1.283 0 5.132-5.825-3.85-1.664-6.843 0-5.132'/%3E %3C/svg%3E"
+        type="image/svg+xml">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Sacramento&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="countdown/simplyCountdown.theme.default.css" />
-    <script src="countdown/simplyCountdown.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
 
     <title>Edi & Dewi Wedding</title>
     <link rel="stylesheet" href="style.css">
@@ -32,35 +36,90 @@
             <a href="http://" class="btn btn-lg mt-4">Lihat Undangan</a>
         </main>
     </section>
-    <nav class="navbar bg-body-tertiary sticky-top">
+    <nav class="navbar navbar-expand-md bg-body-tertiary sticky-top mynavbar">
         <div class="container">
-            <a class="navbar-brand" href="#">Offcanvas navbar</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
-                aria-controls="offcanvasNavbar">
+            <a class="navbar-brand" href="#">Dino</a>
+            <button class="navbar-toggler border-0" type="button" data-bs-toggle="offcanvas"
+                data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
                 aria-labelledby="offcanvasNavbarLabel">
                 <div class="offcanvas-header">
-                    <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
+                    <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Dino</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                 </div>
                 <div class="offcanvas-body">
-                    <div class="navbar-nav">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                        <a class="nav-link" href="#">Features</a>
-                        <a class="nav-link" href="#">Pricing</a>
-                        <a class="nav-link disabled">Disabled</a>
-                      </div>
+                    <div class="navbar-nav ms-auto">
+                        <a class="nav-link active" href="#home">Home</a>
+                        <a class="nav-link" href="#info">Info</a>
+                        <a class="nav-link" href="#story">Story</a>
+                        <a class="nav-link" href="#gallery">Gallery</a>
+                        <a class="nav-link" href="#rsvp">RSVP</a>
+                        <a class="nav-link" href="#gifts">Gifts</a>
+                    </div>
                 </div>
             </div>
         </div>
     </nav>
-    <!-- <h1>Hello, world!</h1> -->
+    <section id="home" class="home">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-8 text-center">
+                    <h2>Acara Pernikahan</h2>
+                    <h3>Diselenggarakan pada 20 november 2059 di salem, Jawa Tengah</h3>
+                    <h3>Oleh Karena itu dengan segala hormat kami bermaksud untuk mengundang Bapak/Ibu/Saudara/i, untuk
+                        hadir pada acara pernikahan kami.</h3>
+                </div>
+            </div>
+            <div class="row couple mt-5">
 
-    <!-- Optional JavaScript; choose one of the two! -->
+                <div class="col-lg-6">
+                    <div class="row">
+                        <div class="col-8 text-end">
+                            <h3>Edi Kurnia</h3>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat, quo esse, quod
+                                provident commodi at eligendi velit adipisci exercitationem amet quia ullam, numquam
+                                voluptatibus et deleniti quasi blanditiis voluptates doloremque!</p>
+                            <p>Putra keempat dari Bpk Jahuri (Alm) <br> dan <br> Ibu Yayah</p>
+                        </div>
+                        <div class="col-4">
+                            <img src="img/edi.jpg" alt="Edi Kurnia" srcset="" class="img-responsive rounded-circle">
+                        </div>
+                    </div>
+                </div>
+                <span class="heart"><i class="bi bi-heart-fill"></i></span>
+                <div class="col-lg-6">
+                    <div class="row">
+                        <div class="col-4">
+                            <img src="img/dewi.jpg" alt="Dewi Agustina" class="img-responsive rounded-circle">
+                        </div>
+                        <div class="col-8">
+                            <h3>Dewi Agustina</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, ut totam? Incidunt
+                                suscipit recusandae, odit molestias delectus ex mollitia blanditiis! At rem ullam sequi
+                                exercitationem corrupti est pariatur minus porro.</p>
+                            <p>Putri kedua dari bapak Kusnanto (Alm) <br> dan <br> Ibu Carwiah</p>
+                        </div>
+                    </div>
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
+                </div>
+            </div>
+        </div>
+    </section>
+   <section id="info" class="info">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 col-10 text-center">
+                <h2>informasi Acara</h2>
+                <p class="alamat">Alamat Tembongraja</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid consequuntur ullam voluptatibus voluptatem temporibus sint, dignissimos veritatis distinctio et quis sunt laborum voluptate, ipsam ut perspiciatis vel, quos repudiandae repellendus!</p>
+            </div>
+        </div>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1664.4708595158177!2d108.7596169650592!3d-7.148974019390649!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e6f768aa783b9bf%3A0xe8b00534ff417628!2sBALAI%20DESA%20TEMBONGRAJA!5e0!3m2!1sen!2sid!4v1717146003040!5m2!1sen!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+    </div>
+   </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
@@ -99,10 +158,13 @@
     </script>
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    -->
+    <script src="countdown/simplyCountdown.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
