--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                     <h2>Gallery Foto</h2>
                 </div>
             </div>
-            <div class="row row-cols-md-3 row-cols-sm-2">
+            <div class="row row-cols-md-3 row-cols-sm-2 row-cols-2">
                 <div class="col mt-3">
                     <a href="img/1.jpeg" data-toggle="lightbox" data-gallery="mygallery">
                     <img src="img/1.jpeg" alt="Gallery Image" class="img-fluid w-100 rounded">
