--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 Kp. Cigugur Rt/Rw 001/004 Desa Indrajaya Kec.Salem Kab. Brebes</p>
             <!-- <a href="http://" target="_blank" class="btn btn-light btn-sm my-4">lihat peta</a> -->
           </div>
-          <div>
+          <div class="row row-cols-md-1 row-cols-sm-1 row-cols-1">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3958.4893635287094!2d108.76488177574275!3d-7.184865270517395!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e6f77a40d3b968d%3A0xf4110949a6b23150!2sCigugur%2C%20Indrajaya%2C%20Salem%2C%20Brebes%20Regency%2C%20Central%20Java!5e0!3m2!1sen!2sid!4v1717259757629!5m2!1sen!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
           
