--- a/index.html
+++ b/index.html
@@ -116,14 +116,14 @@
         <div class="col-md-8 col-10 text-center" data-aos="fade-up">
           <h2>Informasi Acara</h2>
           <p class="alamat">Kediaman mempelai wanita <br>
-            Kp. Cigugur Rt/Rw 001/004 Desa Indrajaya Kec.Salem Kab. Brebes</p>
-          <!-- <a href="http://" target="_blank" class="btn btn-light btn-sm my-4">lihat peta</a> -->
+            Kp. Cigugur RT/RW 001/004 Desa Indrajaya Kec. Salem Kab. Brebes</p>
+          <!-- <a href="https://maps.app.goo.gl/oVD3GLN961TNHMda9" target="_blank" class="btn btn-light btn-md my-4">lihat Peta</a> -->
         </div>
         <div class="row row-cols-md-1 row-cols-sm-1 row-cols-1">
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3958.4893635287094!2d108.76488177574275!3d-7.184865270517395!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e6f77a40d3b968d%3A0xf4110949a6b23150!2sCigugur%2C%20Indrajaya%2C%20Salem%2C%20Brebes%20Regency%2C%20Central%20Java!5e0!3m2!1sen!2sid!4v1717259757629!5m2!1sen!2sid"
             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
+            referrerpolicy="no-referrer-when-downgrade" data-aos="fade-up"></iframe>
         </div>
 
       </div>
@@ -181,27 +181,27 @@
         </div>
       </div>
       <div class="row row-cols-md-3 row-cols-sm-2 row-cols-2">
-        <div class="col mt-3">
+        <div class="col mt-3" data-aos="fade-up">
           <a href="img/1.jpeg" data-toggle="lightbox" data-gallery="mygallery">
             <img src="img/1.jpeg" alt="Gallery Image" class="img-fluid w-100 rounded">
           </a>
         </div>
-        <div class="col mt-3">
+        <div class="col mt-3" data-aos="fade-up">
           <a href="img/2.jpeg" data-toggle="lightbox" data-gallery="mygallery">
             <img src="img/2.jpeg" alt="Gallery Image" class="img-fluid w-100 rounded">
           </a>
         </div>
-        <div class="col mt-3">
+        <div class="col mt-3" data-aos="fade-up">
           <a href="img/3.jpeg" data-toggle="lightbox" data-gallery="mygallery">
             <img src="img/3.jpeg" alt="Gallery Image" class="img-fluid w-100 rounded">
           </a>
         </div>
-        <div class="col mt-3">
+        <div class="col mt-3" data-aos="fade-up">
           <a href="img/4.jpeg" data-toggle="lightbox" data-gallery="mygallery">
             <img src="img/4.jpeg" alt="Gallery Image" class="img-fluid w-100 rounded">
           </a>
         </div>
-        <div class="col mt-3">
+        <div class="col mt-3" data-aos="fade-up">
           <a href="img/5.jpeg" data-toggle="lightbox" data-gallery="mygallery">
             <img src="img/5.jpeg" alt="Gallery Image" class="img-fluid w-100 rounded">
           </a>
@@ -221,7 +221,7 @@
       </div>
       <div class="row justify-content-center text-center data-aos=" fade-up">
         <div class="col-md-5 col-10">
-        <div class="card card-gift text-center text-bg-light mb-5">
+        <div class="card card-gift text-center text-bg-light mb-5" data-aos="fade-up">
           <div class="card-header mx-3">
             Bank Syariah Indonesia (BSI)
           </div>
