--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" />
 
-  <link rel="icon"
-    href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' class='bi bi-envelope-heart' viewBox='0 0 16 16'%3E %3Cpath fill-rule='evenodd' d='M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l3.235 1.94a2.8 2.8 0 0 0-.233 1.027L1 5.384v5.721l3.453-2.124q.219.416.55.835l-3.97 2.443A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741l-3.968-2.442q.33-.421.55-.836L15 11.105V5.383l-3.002 1.801a2.8 2.8 0 0 0-.233-1.026L15 4.217V4a1 1 0 0 0-1-1zm6 2.993c1.664-1.711 5.825 1.283 0 5.132-5.825-3.85-1.664-6.843 0-5.132'/%3E %3C/svg%3E"
-    type="image/svg+xml" />
+  
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
@@ -31,8 +29,8 @@
     class="hero w-100 h-100 p-3 mx-auto text-center d-flex justify-content-center align-items-center text-white">
     <main>
       <h4>Kepada <span></span></h4>
-      <h1>Edy & Dewi</h1>
-      <p>Akan Melangsungkan Resepsi pernikahan dalam.</p>
+      <h1>Edi & Dewi</h1>
+      <p>Akan Melangsungkan Resepsi Pernikahan Dalam</p>
       <div class="simply-countdown"></div>
       <a href="#home" class="btn btn-lg mt-4" onclick="enableScroll(), playAudio();"><i class="bi bi-envelope"></i>
         Lihat Undangan</a>
@@ -81,7 +79,7 @@
             <div class="col-8 text-end">
               <h3>Edi Kurnia</h3>
               <p>
-                Putra keempat dari Bapak Suherman (Alm) <br />
+                Putra Keempat dari Bapak Suherman (Alm) <br />
                 dan <br />
                 Ibu Yayah
               </p>
@@ -100,7 +98,7 @@
             <div class="col-8">
               <h3>Dewi Agustina</h3>
               <p>
-                Putri kedua dari Bapak Kusnanto (Alm) <br />
+                Putri Kedua dari Bapak Kusnanto (Alm) <br />
                 dan <br />
                 Ibu Carwiah
               </p>
