--- a/index.html
+++ b/index.html
@@ -150,12 +150,12 @@
         <div class="col-md-5 col-10">
           <div class="card text-center text-bg-light">
             <div class="card-header">
-              Resepsi - Selesai
+              Resepsi
             </div>
             <div class="card-body">
               <div class="row justify-content-center">
                 <div class="col-md-6">
-                  <i class="bi bi-clock d-block"><span> 10.00 </span></i>
+                  <i class="bi bi-clock d-block"><span> 10.00 s/d Selesai </span></i>
 
                 </div>
                 <div class="row justify-content-center">
